Shenandoah: Fix Traversal GC weak roots handling in final-traversal pause

XMLWordPrintable

    • gc
    • b16
    • generic
    • generic

      We currently clean weak roots only when weak-references are processed in Traversal GC. This is wrong, because it should be independent whether or not it's doing reference-processing.
      Also, (weak) roots need to be updated and cleaned before classes get unloaded (currently), because this is how class-unloaded detects unreachable classes.
      With all this, we no longer need to run class-unloading and reference-processing every cycle, which covered up those bugs.

            Assignee:
            Roman Kennke
            Reporter:
            Roman Kennke
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: