8222227: Shenandoah: Fix Traversal GC weak roots handling in final-traversal pause

Reviewed-by: shade, zgu